--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "frontend-ternos",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.2",
-    "chart.js": "^4.4.0",
+    "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
@@ -14,6 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
